Squashing bugs introduced by rampant changes to views and implementation of links/buttons, removal of name and password fields from registration.

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -133,14 +133,22 @@ form
     padding: 5px 0
     width: 300px
     label
-      text-align: center
+      float: left
+      display: inline-block
+      text-align: right
       text-transform: capitalize
-      width: 150px
+      width: 100px
+      position: relative
+      top: 0.3em
+      font-size: 1.6em
+      margin-right: 0.3em
     input[type="text"]
-      float: right
-      width: 150px
+      float: left
+      font-size: 1.4em
+      width: 170px
     input[type="submit"]
-      margin-left: 145px
+      margin-left: 100px
+      font-size: 1.6em
 
 #tabs-info
   +clearfix
